--- a/.github/workflows/sast.yml
+++ b/.github/workflows/sast.yml
@@ -1,3 +1,8 @@
+- name: Set up Java
+  uses: actions/setup-java@v3
+  with:
+    distribution: 'temurin'
+    java-version: '17'
 name: SAST SonarQube
 
 on:
