--- a/.github/workflows/sast.yml
+++ b/.github/workflows/sast.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Set up Java
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
+          destribution: 'temurin'
           java-version: '17'
 
       - name: Cache SonarQube packages
