--- a/.github/workflows/sast.yml
+++ b/.github/workflows/sast.yml
@@ -1,40 +1,42 @@
 name: SAST SonarQube
 
 on:
-push:
-branches: [ "main" ]
+  push:
+    branches: [ "main" ]
 
 jobs:
-sonarqube-analysis:
-runs-on: ubuntu-latest
-steps:
-- uses: actions/checkout@v3
+  sonarqube-analysis:
+    runs-on: ubuntu-latest
 
-- name: Set up Java
-uses: actions/setup-java@v3
-with:
-distribution: 'temurin'
-java-version: '17'
+    steps:
+      - uses: actions/checkout@v3
 
-- name: Cache
-uses: actions/cache@v4.3.0
-with:
-path: ~/.sonar/cache
-key: ${{ runner.os }}-sonar
+      - name: Set up Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
-- name: Download SonarScanner
-run: |
-curl -sSLo sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856.zip
-unzip sonar-scanner.zip
-chmod +x sonar-scanner-*/bin/sonar-scanner
+      - name: Cache SonarQube packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
 
-- name: Run SonarQube Scan
-env:
-SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-run: |
-./sonar-scanner-*/bin/sonar-scanner \
--Dsonar.projectKey=tp-sast \
--Dsonar.sources=. \
--Dsonar.host.url= https://sidewardly-unreverenced-kyra.ngrok-free.dev \
--Dsonar.login=$SONAR_TOKEN \
--X
+      - name: Download SonarScanner
+        run: |
+          curl -sSLo sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856.zip
+          unzip sonar-scanner.zip
+          chmod +x sonar-scanner-*/bin/sonar-scanner
+
+      - name: Run SonarQube Scan
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: |
+          ./sonar-scanner-*/bin/sonar-scanner \
+            -Dsonar.projectKey=tp-sast \
+            -Dsonar.sources=. \
+            -Dsonar.host.url=https://sidewardly-unreverenced-kyra.ngrok-free.app \
+            -Dsonar.login=$SONAR_TOKEN \
+            -X
+
